# iEEG-data-release

./: .all-contributorsrc  .gitignore  01PreprocessingMaster_new.py  02OnsetResponsiveness.py  CITATION.cff  Decoding.py  Decoding_task-Duration_release.json  HelperFunctions.py  OnsetResponsiveness.py  OnsetResponsiveness_task-Duration_release.json  PreprocessingMaster.py  PreprocessingParameters_task-Duration_release.json  README.md  batch_subjects_reports.py  bids_convert_new.py  environment.yml  environment_variables.py  ieeg-data-release(13).html  ieeg-data-release.ipynb  ieeg_bids_conversion.py  ieeg_plots.py  pyproject.toml  requirements.txt  setup.py  test_bids_conversion.py  xnat_utilities.py
WU_coregistration/: NlxtoEDFplus_script.m
cog_ieeg/: Decoding.py  OnsetResponsiveness.py  Preprocessing.py  __init__.py  localization.py  processing.py  utils.py  vizualization.py  xnat_utilities.py
cog_ieeg/config/: preprocessing-doc_config-default.json
cog_ieeg/pipelines/: Decoding.py  OnsetResponsiveness.py  Preprocessing.py  __init__.py
docs/: Onset_responsiveness_config-template.json  task-Dur_events_description.json
misc/: ieeg_plots.py
misc/WU_coregistration/: README.md  SG_UW_match_br_to_natus.m  loadNlxData.m
notebooks/: batch_subjects_reports.py  ieeg-data-release.ipynb  ieeg-single-subject-report.ipynb  output_CF102.ipynb
pipelines/: Decoding.py  Decoding_config-default.json  OnsetResponsiveness.py  Onset_responsiveness_config-default.json  Preprocessing.py  decoding_config-default.json  onset_responsiveness_config-default.json  preprocessing_config-default.json
preprocessing/: 01PreprocessingMaster_new.py  02OnsetResponsiveness.py  HelperFunctions.py  PreprocessingMaster.py
utils/: Decoding.py  OnsetResponsiveness.py  Preprocessing.py  xnat_utilities.py
