[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cog_ieeg", "cog_ieeg.pipelines"]

[project]
name = "cog_ieeg"
version = "0.1.0-beta"
description = "A Python package to download and analyze iEEG data collected as part of the COGITATE project"
readme = "README.md"
authors = [
    { name = "Alex Lepauvre", email = "alex.lepauvre@ae.mpg.de" },
    { name = "Simon Henin", email = "Simon.Henin@nyulangone.org" },
    { name = "Katarian Bendtz", email = "katarina.bendtz@gmail.com" },
    { name = "Praveen Sriprad", email = "praveen.sripad@ae.mpg.de" },
    { name = "Niccolò Bonacchi", email = "nbonacchi@gmail.com" },
    { name = "Gabriel Kreiman", email = "Gabriel.Kreiman@childrens.harvard.edu" },
    { name = "Lucia Melloni", email = "lucia.melloni@ae.mpg.de" },
]
requires-python = ">=3.9"
dependencies = [
    "ipython",
    "jupyter",
    "mne==1.7.1",
    "mne-bids==0.15.0",
    "networkx",
    "nibabel",
    "nilearn",
    "pandas",
    "pingouin",
    "pyqt5",
    "pyvista",
    "pyvistaqt",
    "pyyaml",
    "xnat",
    "papermill"
]

[tool.setuptools.package-data]
cog_ieeg = ["config/*.json"]
